Warn the user when trying to import more than 100 frames

BUG:436967